k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meeting-center-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meeting-center-api
  template:
    metadata:
      labels:
        app: meeting-center-api
    spec:
      containers:
        - name: meeting-center-api
          image: ghcr.io/jammy0611/meeting-center-backend:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: meeting-center-api
spec:
  type: ClusterIP
  selector:
    app: meeting-center-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
