k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger-container
          image: jaegertracing/all-in-one:1.56
          ports:
            - containerPort: 16686
            - containerPort: 4317
            - containerPort: 4318
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  type: ClusterIP
  selector:
    app: jaeger
  ports:
    - name: jaeger-query
      protocol: TCP
      port: 16686
      targetPort: 16686
    - name: jaeger-collector
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: jaeger-agent
      protocol: TCP
      port: 4318
      targetPort: 4318
