k8s/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongo-container
          image: mongo
          ports:
            - containerPort: 27017
        - name: mongo-express-container
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
    - name: mongo-express
      protocol: TCP
      port: 8081
      targetPort: 8081
